themes/dcp/assets/scss/5-objects/_content.scss
@use 'sass:math';

.content {
    $breakpoint--wide: $grid--wide + 2 * $padding--large;
    $breakpoint--normal: $grid--normal + 2 * $padding--medium;

    display: grid;
    grid-template-columns:
        [start] 1fr
        [wide-start left-start] #{math.div($grid--wide - $grid--normal, 2)}
        [center-start left-end] #{$grid--normal}
        [right-start center-end] #{math.div($grid--wide - $grid--normal, 2)}
        [right-end wide-end] 1fr
        [end];
    max-width: unset;
    padding-inline: 0;
    width: 100vw;

    & > :not(.alignfull) {
        padding-inline: $padding--large;
    }

    @media (max-width: $breakpoint--wide) {
        grid-template-columns:
            [start wide-start] 1fr
            [left-start center-start right-start] #{$grid--normal}
            [right-end center-end left-end] 1fr
            [wide-end end];
    }

    @media (max-width: $breakpoint--normal) {
        grid-template-columns:
            [start wide-start left-start center-start right-start] 1fr
            [right-end center-end left-end wide-end end];

        & > :not(.alignfull) {
            padding-inline: $padding--medium;
        }
    }

    &--normal {

        & > * {
            grid-column: center-start / center-end;
        }
    }

    &--wide {

        & > * {
            grid-column: wide-start / wide-end;
        }
    }

    .alignleft {
        grid-column: left-start / left-end;

        @media (min-width: $breakpoint--wide) {
            padding-inline-end: 0;
        }
    }

    .aligncenter {
        grid-column: center-start / center-end;
    }

    .alignright {
        grid-column: right-start / right-end;

        @media (min-width: $breakpoint--wide) {
            padding-inline-start: 0;
        }
    }

    .alignwide {
        grid-column: wide-start / wide-end;
        grid-template-columns: subgrid;
    }

    .alignfull {
        grid-column: start / end;
        grid-template-columns: subgrid;
    }
}

